--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Code Brunch # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: logo_codebrunch.png # add your photo
 about-author: 초보 개발자의 스터디 일지 # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
