--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Code Brunch # add your name
-author-img: logo_codebrunch.png # add your photo
-about-author: 초보 개발자의 스터디 일지 # add description
+author-img: logo_coffee.png # add your photo
+about-author: Python / Machine-Learning / CyberSecurity # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
