--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Code Brunch # add your name
-author-img: logo_coffee.png # add your photo
+author-img: logo_coffee.jpg # add your photo
 about-author: Python / Machine-Learning / CyberSecurity # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
