--- a/_config.yml
+++ b/_config.yml
@@ -12,14 +12,14 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Code Brunch # add your name
 author-img: logo_coffee.jpg # add your photo
 about-author: Python / Machine-Learning / CyberSecurity # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+#social-twitter: # add your Twitter handle
+#social-facebook: # add your Facebook handle
+social-github: code-brunch # add your Github handle
+#social-linkedin: # add your Linkedin handle
+social-email: code.brunch77@gmail.com# add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: code-brunch # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
