--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Code Brunch # add your name
 author-img: logo_coffee2.jpg # add your photo
 about-author: Python / Machine-Learning / CyberSecurity # add description
-#social-twitter: # add your Twitter handle
-#social-facebook: # add your Facebook handle
+social-twitter: # add your Twitter handle
+social-facebook: # add your Facebook handle
 social-github: code-brunch # add your Github handle
-#social-linkedin: # add your Linkedin handle
+social-linkedin: # add your Linkedin handle
 social-email: code.brunch77@gmail.com# add your Email address
 
 # Disqus
