--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Code Brunch
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  프로그래밍 언어, 데이터 전처리 및 분석, 컴퓨터 과학, 임베디드 시스템, 머신러닝 관련된 컨텐츠를
+  다루는 개발자의 블로그입니다.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "code-brunch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
