--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Code Brunch
 description: > # this means to ignore newlines until "baseurl:"
-  프로그래밍 언어, 데이터 전처리 및 분석, 컴퓨터 과학, 임베디드 시스템, 머신러닝 관련된 컨텐츠를
-  다루는 개발자의 블로그입니다.
+  프로그래밍 언어, 데이터 전처리 및 분석, 컴퓨터 과학, 임베디드 시스템, 머신러닝 분야에 관심있는
+  분들과 함께 정보를 공유하고자 만든 블로그입니다.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "code-brunch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
